WIP Q&A feature: - fix add question button's alignment

--- a/templates/default/app.less
+++ b/templates/default/app.less
@@ -398,11 +398,11 @@ span.et2_checkbox_slideSwitch {
 		height: ~"calc(100% - 60px) !important";
 		top: 30px;
 	}
-	button#smallpart-student-index_toolbar_add_question {
+	button[id$="_toolbar_add_question"] {
 		margin-top: 1px;
 		right: 0;
 		position: absolute;
-		margin-right: 0px;
+		margin-right: 0px !important;
 	}
 }
 .et2_smallpart-videooverlay.editable.editmode {
