--- a/templates/default/theme1.css
+++ b/templates/default/theme1.css
@@ -2246,11 +2246,11 @@ span.et2_checkbox_slideSwitch > span.slideSwitch_container a {
   height: calc(100% - 60px) !important;
   top: 30px;
 }
-.et2_smallpart-videooverlay.editable button#smallpart-student-index_toolbar_add_question {
+.et2_smallpart-videooverlay.editable button[id$="_toolbar_add_question"] {
   margin-top: 1px;
   right: 0;
   position: absolute;
-  margin-right: 0px;
+  margin-right: 0px !important;
 }
 .et2_smallpart-videooverlay.editable.editmode {
   margin-bottom: 0px;
